<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D2403E"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="com.roojay.android.courtcounter.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/textView"
                android:id="@+id/teama_text_view"
                android:text="@string/team_a" />

            <TextView
                style="@style/pointsTextView"
                android:id="@+id/pointsa_text_view"
                android:text="@string/points_a" />

            <Button
                style="@style/addButtonView"
                android:id="@+id/buttona3"
                android:onClick="addThreeA"
                android:text="@string/add3a" />

            <Button
                style="@style/addButtonView"
                android:id="@+id/buttona2"
                android:onClick="addTwoA"
                android:text="@string/add2a" />

            <Button
                style="@style/addButtonView"
                android:id="@+id/buttona1"
                android:onClick="addOneA"
                android:text="@string/add1a" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="#FFFEFE" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/textView"
                android:id="@+id/teamb_text_view"
                android:text="@string/team_b" />

            <TextView
                style="@style/pointsTextView"
                android:id="@+id/pointsb_text_view"
                android:text="@string/points_b" />

            <Button
                style="@style/addButtonView"
                android:id="@+id/buttonb3"
                android:onClick="addThreeB"
                android:text="@string/add3b" />

            <Button
                style="@style/addButtonView"
                android:id="@+id/buttonb2"
                android:onClick="addTwoB"
                android:text="@string/add2b" />

            <Button
                style="@style/addButtonView"
                android:id="@+id/buttonb1"
                android:onClick="addOneB"
                android:text="@string/add1b" />

        </LinearLayout>
    </LinearLayout>

    <Button
        style="@style/resetButtonView"
        android:id="@+id/button_reset"
        android:onClick="reset"
        android:text="@string/reset_text_views" />


</RelativeLayout>
